# netlistx-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  GEMINI.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  classes.html  classgreeter_1_1Greeter.html  classnetlistx_1_1NetlistX.html  classnetlistx_1_1thread__pool-members.html  classnetlistx_1_1thread__pool.html  classpy_1_1Generator-members.html  classpy_1_1Generator.html  classpy_1_1Generator_1_1iterator-members.html  classpy_1_1Generator_1_1iterator.html  classtransrangers_1_1____lambda__244__25-members.html  classtransrangers_1_1____lambda__244__25.html  classtransrangers_1_1____lambda__246__16-members.html  classtransrangers_1_1____lambda__246__16.html  classtransrangers_1_1____lambda__249__18-members.html  classtransrangers_1_1____lambda__249__18.html  classtransrangers_1_1____lambda__255__33-members.html  classtransrangers_1_1____lambda__255__33.html  classtransrangers_1_1detail_1_1view_1_1forward__iterator-members.html  classtransrangers_1_1detail_1_1view_1_1forward__iterator.html  classtransrangers_1_1detail_1_1view_1_1forward__iterator__inherit__graph.map  classtransrangers_1_1detail_1_1view_1_1forward__iterator__inherit__graph.md5  classtransrangers_1_1detail_1_1view_1_1input__iterator-members.html  classtransrangers_1_1detail_1_1view_1_1input__iterator.html  classtransrangers_1_1detail_1_1view_1_1input__iterator__inherit__graph.map  classtransrangers_1_1detail_1_1view_1_1input__iterator__inherit__graph.md5  classtransrangers_1_1detail_1_1view_1_1iterator__base-members.html  classtransrangers_1_1detail_1_1view_1_1iterator__base.html  classtransrangers_1_1detail_1_1view_1_1view-members.html  classtransrangers_1_1detail_1_1view_1_1view.html  classtransrangers_1_1detail_1_1view_1_1view__coll__graph.md5  classtransrangers_1_1detail_1_1view_1_1view__inherit__graph.map  (+159 more)
.github/workflows/: install.yml  macos.yml  standalone.bak  ubuntu.yml  windows.yml
.xmake/windows/x64/cache/: config  detect  history  package  references  toolchain
all/: CMakeLists.txt
cmake/: specific.cmake
documentation/: CMakeLists.txt  conf.py
documentation/pages/: about.dox
example/standalone_spdlog_example/: CMakeLists.txt
example/standalone_spdlog_example/source/: main.cpp
include/: transranger_view.hpp  transrangers.hpp  transrangers_ext.hpp
include/netlistx/: cover.hpp  gen.hpp  graph_algo.hpp  greeter.h  hadlock.hpp  logger.hpp  netlist.hpp  netlist_algo.hpp  rand_cover.hpp  rand_cover_gpu.hpp  readwrite.hpp  thread_pool.hpp  tsp.hpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  files_1.js  files_4.js  files_5.js  files_6.js  (+35 more)
source/: greeter.cpp  logger.cpp  netlist.cpp  netlist_algo.cpp  rand_cover_gpu.cu  readwrite.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  main.cpp  test_cover.cpp  test_graph_algo.cpp  test_hadlock.cpp  test_netlist.cpp  test_netlist_algo.cpp  test_netlist_more.cpp  test_rand_cover.cpp  test_rand_cover_gpu.cpp  test_rapidcheck.cpp  test_rapidcheck.tpp  test_readwrite.cpp  test_spdlogger.cpp  test_transrangers_xnGraph.cpp  test_tsp.cpp
testcases/: dwarf1.are  dwarf1.netD  tiny.dimacs  tiny.hgr  tiny_json.json
